<resources>
    <string name="app_name">Flexcility</string>
    <string name="welcome_message">Flexcility</string>
    <string name="motto">A Facilities Maintenance Management App</string>
    <string name="email_prompt">Please sign in with your email address and password</string>
    <string name="email_hint">your@email.com</string>
    <string name="phone_number_prompt">Enter your phone number</string>
    <string name="phone_number_hint">60126893949</string>
    <string name="send_sms_button">Send SMS Verification</string>
    <string name="send_email_button_text">Send Email Verification</string>
    <string name="connection_error">Connection Error</string>
    <string name="could_not_connect_to_network">No network detected. Check your connection settings and try again.</string>
    <string name="check_connection_and_try_again">You might want to check your connection settings and try again. </string>
    <string name="verification_code_sent">A verification code has been sent to the number </string>
    <string name="action_save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="ok">OK</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="communicate">Communicate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="projects">Projects</string>
    <string name="work_requests">Work Requests</string>
    <string name="work_orders">Work Orders></string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="email_placeholder">email@server.com</string>

    <string name="header_image_description">Header image for navigation drawer</string>

    <string name="project_image">Project Image</string>
    <string name="project_name">Project Name</string>
    <string name="project_description">Project Description</string>
    <string name="project_address">Address</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="title_activity_register">RegisterActivity</string>

    <string name="title_activity_forgot">ForgotPassActivity</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">Your facebook app id</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_project_show">Project</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum">Sugar plum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="article_detail_more_info">More Info</string>


    <string name="samples_title">Hello title</string>
    <string name="samples_subhead">Hello Subhead</string>
    <string name="samples_hint_username">Username</string>
    <string name="samples_hint_email">E-Mail</string>


    <string name="navigation_title">My navigation title</string>
    <string name="navigation_quotes">Quotes</string>
    <string name="navigation_samples">Samples</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_sub_items">Sub items</string>
    <string name="navigation_dummy_item_1">Dummy item 1</string>
    <string name="navigation_dummy_item_2">Dummy item 2</string>
</resources>
