<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".LoginActivity"
android:textAlignment="center"
android:paddingTop="20dp">


<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/welcome_message"
    android:id="@+id/welcomeMessage"
    android:textSize="32sp"
    android:textStyle="bold"
    android:textAlignment="center" />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/motto"
    android:id="@+id/motto"
    android:textAlignment="center" />

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/phone_number_prompt"
        android:id="@+id/phone_number_prompt"
        android:textAlignment="center"
        android:padding="30dp" />
</LinearLayout>

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="phone"
    android:ems="10"
    android:hint="@string/phone_number_hint"
    android:id="@+id/phoneNumberInput"
    android:layout_gravity="center_horizontal"
    android:textAlignment="center" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/send_sms_button"
    android:id="@+id/send_sms_button"
    android:layout_gravity="center_horizontal"
    android:onClick="sendVerificationSms" />


</LinearLayout>
