<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowSpan="2"
        android:id="@+id/projectImage"
        android:contentDescription="@string/project_image"
        android:layout_row="0"
        android:layout_column="0"
        android:paddingEnd="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        android:layout_columnWeight="1"
        android:id="@+id/projectName"
        android:layout_row="0"
        android:layout_column="1"
        android:textAppearance="?attr/textAppearanceListItem"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_description"
        android:layout_columnWeight="1"
        android:id="@+id/projectDesc"
        android:layout_row="1"
        android:layout_column="1"
        android:textAppearance="?attr/textAppearanceListItem" />


</GridLayout>
