<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/projectDetailsForm">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/projectName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/project_name"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/projectDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/project_description"
                android:imeActionId="@+id/projectDesc"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textMultiLine"
                android:maxLines="5"/>

        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:layout_width="162dp"
            android:layout_height="166dp"
            app:srcCompat="@drawable/ic_menu_gallery"
            android:contentDescription="@string/project_image"
            android:id="@+id/imageButton"
            android:layout_gravity="center" />



</LinearLayout>